# pallet-verifier

./: ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  README.md  TESTING.md  rust-toolchain.toml
.cargo/: config.toml
artifacts/: contracts.rs  mirai_annotations.rs  tokio_shims.rs
benches/: bencher.rs
benches/multisig/edit/src/: lib.rs
benches/preimage/edit/src/: lib.rs
benches/treasury/edit/src/: lib.rs
src/: callbacks.rs  cli_utils.rs  compiler.rs  driver.rs  file_loader.rs  lib.rs  main.rs  providers.rs  utils.rs
src/callbacks/: entry_point.rs  entry_points.rs  summaries.rs  utils.rs  verifier.rs
src/providers/: analyze.rs  annotate.rs  closure.rs  int_cast_overflow.rs  iterator_annotations.rs  passes.rs  storage.rs  summaries.rs  traverse.rs
src/providers/passes/: collection_invariants.rs  int_cast_overflow.rs  iterator_invariants.rs  slice_invariants.rs
tests/: compile-test.rs
tests/ui/cargo/arithmetic-overflow/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/cargo/arithmetic-overflow/src/: lib.rs
tests/ui/cargo/division-by-zero/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/cargo/division-by-zero/src/: lib.rs
tests/ui/cargo/int-cast-overflow/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/cargo/int-cast-overflow/src/: lib.rs
tests/ui/cargo/minimal-tractable/: Cargo.toml
tests/ui/cargo/minimal-tractable-arith-overflow/: Cargo.stderr  Cargo.toml
tests/ui/cargo/minimal-tractable-arith-overflow/src/: lib.rs
tests/ui/cargo/minimal-tractable-div-by-zero/: Cargo.stderr  Cargo.toml
tests/ui/cargo/minimal-tractable-div-by-zero/src/: lib.rs
tests/ui/cargo/minimal-tractable-int-cast-overflow/: Cargo.stderr
tests/ui/cargo/minimal-tractable-int-cast-overflow/src/: lib.rs
tests/ui/cargo/minimal-tractable-panic/: Cargo.stderr  Cargo.toml
tests/ui/cargo/minimal-tractable-panic/src/: lib.rs
tests/ui/cargo/minimal-tractable-safe-arith-saturating/src/: lib.rs
tests/ui/cargo/minimal-tractable-safe-int-cast/: Cargo.stdout
tests/ui/cargo/minimal-tractable-safe-int-cast/src/: lib.rs
tests/ui/cargo/minimal-tractable/src/: lib.rs
tests/ui/cargo/no-dispatchables/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/cargo/no-dispatchables/src/: lib.rs
tests/ui/cargo/no-specialized-dispatchable-calls/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/cargo/no-specialized-dispatchable-calls/src/: lib.rs
tests/ui/cargo/not-frame-pallet/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/cargo/panic/: Cargo.stderr  Cargo.toml
tests/ui/cargo/panic/src/: lib.rs
tests/ui/cargo/safe-arithmetic/: Cargo.stdout  Cargo.toml
tests/ui/cargo/safe-arithmetic/src/: lib.rs
tests/ui/cargo/safe-collection-ops-bounds/: Cargo.stdout  Cargo.toml
tests/ui/cargo/safe-collection-ops-bounds/src/: lib.rs
tests/ui/cargo/safe-int-cast/: Cargo.stdout  Cargo.toml
tests/ui/cargo/safe-int-cast/src/: lib.rs
tests/ui/cargo/safe-iterator-ops-bounds/: Cargo.stdout  Cargo.toml
tests/ui/cargo/safe-iterator-ops-bounds/src/: lib.rs
tests/ui/cargo/safe-slice-ops-bounds/: Cargo.stdout  Cargo.toml
tests/ui/cargo/safe-slice-ops-bounds/src/: lib.rs
tests/ui/cargo/storage-aliasing/: Cargo.stdout  Cargo.toml
tests/ui/cargo/storage-aliasing/src/: lib.rs
tests/ui/cargo/unsafe-collection-ops-bounds/: Cargo.stderr  Cargo.toml
tests/ui/cargo/unsafe-collection-ops-bounds/src/: lib.rs
tests/ui/cargo/unsafe-iterator-ops-bounds/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/cargo/unsafe-iterator-ops-bounds/src/: lib.rs
tests/ui/cargo/unsafe-slice-ops-bounds/: Cargo.stderr  Cargo.stdout
tests/ui/cargo/unsafe-slice-ops-bounds/src/: lib.rs
tests/ui/driver/: missing-dispatchable-definition.rs  missing-dispatchable-definition.stderr  missing-dispatchable-definition.stdout  no-specialized-dispatchable-calls.rs  no-specialized-dispatchable-calls.stderr  no-specialized-dispatchable-calls.stdout  not-frame-pallet.rs  not-frame-pallet.stderr  tractable-skeleton-arith-overflow.rs  tractable-skeleton-arith-overflow.stderr  tractable-skeleton-div-by-zero.rs  tractable-skeleton-div-by-zero.stderr  tractable-skeleton-int-cast-overflow.rs  tractable-skeleton-int-cast-overflow.stderr  tractable-skeleton-int-cast-overflow.stdout  tractable-skeleton-panic.rs  tractable-skeleton-panic.stderr  tractable-skeleton-safe-arith-saturating.rs  tractable-skeleton-safe-arith-saturating.stdout  tractable-skeleton-safe-arith-wrapping.rs  tractable-skeleton-safe-int-cast.rs  tractable-skeleton.rs
tests/ui/sdk/assets/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/sdk/balances/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/sdk/child-bounties/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/sdk/multisig/: Cargo.stderr  Cargo.stdout  Cargo.toml
tests/ui/sdk/preimage/: Cargo.stdout  Cargo.toml
tests/ui/sdk/treasury/: Cargo.stderr  Cargo.stdout  Cargo.toml
