[package]
name = "pallet-verifier"
version = "0.1.0"
edition = "2021"
description = "A tool for detecting common security vulnerabilities and insecure patterns in FRAME pallets using static program analysis techniques."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/davidsemakula/pallet-verifier"
homepage = "https://github.com/davidsemakula/pallet-verifier"
keywords = ["FRAME", "polkadot", "substrate", "blockchain"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
publish = false
build = "build.rs"

[[bin]]
name = "cargo-verify-pallet"
test = false
path = "src/main.rs"

[[bin]]
name = "pallet-verifier"
path = "src/driver.rs"

[dependencies]
itertools = "0.13.0"
mirai = { git = "https://github.com/davidsemakula/MIRAI.git", rev = "08efe51f953ab149f599adf7e187f5972bdd574b" }
rustc_tools_util = "0.3.0"
tempfile = "3.10.1"

[build-dependencies]
rustc_tools_util = "0.3.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
