[package]
name = "pallet-verifier"
version = "0.1.0"
edition = "2021"
description = "A tool for detecting common security vulnerabilities and insecure patterns in FRAME pallets using static program analysis techniques."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/davidsemakula/pallet-verifier"
homepage = "https://github.com/davidsemakula/pallet-verifier"
keywords = ["FRAME", "polkadot", "substrate", "blockchain"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
publish = false
build = "build.rs"

[lib]
test = false
bench = false

[[bin]]
name = "cargo-verify-pallet"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "pallet-verifier"
path = "src/driver.rs"
test = false
bench = false

[[test]]
name = "compile-test"
harness = false

[[bench]]
name = "bencher"
harness = false

[dependencies]
cargo_metadata = "0.18.1"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
mirai = { git = "https://github.com/davidsemakula/MIRAI.git", branch = "pallet-verifier-2025-05-09" }
rustc_tools_util = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.125"
tempfile = "3.10.1"
owo-colors = "4.1.0"

[dev-dependencies]
mirai-annotations = "1.12.0"
ui_test = "0.26.5"

[build-dependencies]
rustc_tools_util = "0.3.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
