[package]
name = "pallet-treasury"
version = "27.0.0"
#authors.workspace = true
#edition.workspace = true
edition = "2021"
license = "Apache-2.0"
#homepage.workspace = true
#repository.workspace = true
description = "FRAME pallet to manage treasury"
readme = "README.md"

#[lints]
#workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec" }
docify = "0.2.8"
impl-trait-for-tuples = "0.2.2"
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"], optional = true, default-features = true }
frame-benchmarking = { version = "38.0.0", optional = true, default-features = false }
frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-core = { version = "34.0.0", optional = true, default-features = false }

[dev-dependencies]
sp-io = { version = "38.0.0", default-features = true }
pallet-utility = { version = "38.0.0", default-features = true }
sp-core = { version = "34.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-utility/std",
	"scale-info/std",
	"serde",
	"sp-core?/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"dep:sp-core",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-utility/try-runtime",
	"sp-runtime/try-runtime",
]
